FoodBank/objects/Verification__c.object
<CustomObject>
    <description>Verifications</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Verifications</relationshipLabel>
        <relationshipName>Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Self__c</fullName>
        <formula>HYPERLINK(Id, TEXT(VerifFor__c) &amp; &quot;: &quot; &amp; TypeDoc__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeDoc__c</fullName>
        <description>Type of document used for verification</description>
        <label>TypeDoc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifFor__c</fullName>
        <label>Verif For</label>
        <picklist>
            <picklistValues>
                <fullName>Custody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Doc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Verification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>